fix alignment in exercise page v2

--- a/app/assets/stylesheets/pages/_exercises.scss
+++ b/app/assets/stylesheets/pages/_exercises.scss
@@ -26,8 +26,7 @@
   align-items: flex-start;
   flex-shrink: 0;
   padding: 11px 11px;       /* Padding on all sides */
-  margin: 2%;       /* Margin from screen edge and other elements */
-  margin-left: 5%;
+  margin: 10px auto;       /* Margin from screen edge and other elements */
   border-radius: 30px;
   background: rgba(60,150,135,0.65);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.13);
